Added Connection to Database and Load Data into the tables

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data source=localhost; Initial Catalog=DOTNET_SERVER; User Id=sa"
+        "DefaultConnection": "Data Source=localhost; Initial Catalog=abc; User Id=sa;Password=cactus123;Trusted_Connection=true;"
     },
     "Logging": {
         "LogLevel": {
