Added sorting and filtering

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=localhost; Initial Catalog=abc; User Id=sa;Password=cactus123;Trusted_Connection=true;"
+        "DefaultConnection": "Data Source=localhost; Initial Catalog=abc; User Id=sa;Password=cactus123; Trusted_Connection=SSPI; MultipleActiveResultSets=true; Trust Server Certificate=true;"
+        
     },
     "Logging": {
         "LogLevel": {
